app/global.css
/* ... */
.council-content {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.council-cards {
	display: grid;
	grid-template-columns: repeat(2, 1fr); /* 2 columns with equal width */
	gap: 20px;
	margin-bottom: 4px;
}

.council-card {
	width: 590px;
	min-height: 200px;
	padding: 20px;
	border-radius: 16px;
	background: linear-gradient(to bottom, #46537a, #203864);
	color: #ffffff;
	font-size: 16px;
}

.council-member-portfolio {
	width: 200px;
	min-height: 200px;
	padding: 20px;
	border-radius: 16px;
	color: #ffffff;
	font-size: 16px;
}

.council-card-message {
	margin-bottom: 20px;
}

.council-card-member {
	display: flex;
	align-items: center;
}

.council-card-member-image {
	width: 60px;
	height: 60px;
	border-radius: 50%;
	background-color: grey;
	/* background-image: url('path/to/your-image.jpg');
background-size: cover; */
	margin-right: 10px;
}

.council-member-card {
	border-radius: 16px;
	background: var(--Background-Color, #21234b);
	backdrop-filter: blur(2px);
	display: flex;
	padding: 20px;
	flex-direction: column;
	align-items: center;
	flex: 1 0 0;
	width: 200px;
	height: 200px;
}


@media (max-width: 1110px) {
	
	.member-card-container {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		gap: 20px;
		justify-content: center;
	}

	.team-member-card:first-child {
		margin-left: 10px !important;
	}
	
	.team-member-card:last-child {
		margin-right: 10px !important;
	}
}


@media (max-width: 1040px) {
	.member-card-container {
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
	}

	.team-member-card {
		margin-left: 10px;
		margin-right: 10px;
		margin-bottom: 20px;
		gap: 20px;
	}

	.team-member-card:first-child {
		margin-left: 10px !important;
	}
	
	.team-member-card:last-child {
		margin-right: 10px !important;
	}
}


@media (max-width: 925px) {
	
	/* Background image */
	/* .about-council-content {
		background: url("/img/choose-council.png") top right no-repeat;
	} */


	/* What's the Council? */
	.about-council-p1 {
		width: 80% !important;
	}

	
	/* How it works */
	.how-it-works-div {
		display: flex;
		flex-direction: column;
		align-items: center;
		margin: 0 !important;
	}

	.about-council-p2 {
		width: 80% !important;
	}


	/* How we started */
	.how-we-started-div {
		display: flex;
		flex-direction: column-reverse;
	}

	.about-council-h2 {
		padding-top: 20px;
	}
}


@media (max-width: 600px) {
	.footer-container {
		padding-right: 50px !important;
	}
}

@media (max-width: 570px) {
	.about-council-content {
		background: none !important;
	}

	.about-council-div {
		padding-top: 25px !important;
	}
}



@media (max-width: 440px) {
	
	.team-header {
		font-size: 32px;
	}

	.team-container, .usage-container, .footer-container {
		padding: 50px !important;
	}


}


.council-member-card {
	border-radius: 16px;
	background: var(--Background-Color, #21234b);
	backdrop-filter: blur(2px);

	display: flex;
	padding: 20px;
	flex-direction: column;
	align-items: center;
	/* gap: 12px; */
	flex: 1 0 0;

	width: 200px;
	height: 200px;
}

.council-reply-prompt {
	margin-top: 24px;
}

.council-reply-prompt-input {
	min-width: 488px;
	vertical-align: middle;
	margin-right: 12px;
}

.reply-button {
	vertical-align: middle;
}

.done-text {
	margin-top: 16px;
	text-decoration: underline;
}

.overlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, 0.7);
	 /* Adjust the background color and opacity as needed */
	backdrop-filter: blur(5px); /* Adjust the blur amount as needed */
	z-index: 999; /* Ensure the overlay is above other elements */
	display: flex;
	justify-content: center;
	align-items: center;
	overflow: hidden;
}

.pop-up-content {
	/* filter: blur(5px); */
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
	justify-content: center;
	align-items: center;
	z-index: 9999;
	color: #ffffff;
	max-height: 100%;
	overflow-y: auto;
}

.close-button {
	background: none;
	border: none;
	padding: 0;
	cursor: pointer;
	position: absolute;
	top: 60px;
	right: 100px;
}

.close-icon {
	font-size: 52px;
	color: #ffffff;
}

.pop-up-title {
	font-size: 64px;
	font-weight: 900;
	color: #ffffff;
}

.pop-up-subtitle {
	font-size: 20px;
	font-weight: 600;
	color: #ffffff;
	margin-bottom: 40px;
}
.pop-up-image-convo {
	display: flex;
	height: 100%;
	min-width: 500px;
}

.pop-up-image {
	margin-right: 100px;
	min-width: 400px;
	min-height: 400px;
}

.user-message-blob {
	background: linear-gradient(to bottom, #d4d7e0, #9fb4dc);
	border-radius: 16px 16px 0px 16px;
	padding: 16px;
	margin-left: 38px;
	color: #153747;
}

.member-message-blob {
	background: linear-gradient(to bottom, #46537a, #203864);
	border-radius: 16px 16px 16px 0px;
	padding: 16px;
	margin-right: 38px;
	color: #ffffff;
	display: inline-block;
}

.hero-content {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: center;
}

.hero-text {
	margin-left: 10%;
}

.hero-title {
	margin-top: 20%;
	text-align: left;
}

.hero-swappable-line {
	display: flex;
	align-items: centre;
	/* justify-content: center; */
}

@media (max-width: 745px) {

	.hero-h2,
	.hero-swappable-1,
	.hero-swappable-2,
	.hero-swappable-3 {
	font-size: 32px !important;
	margin: 0 5px !important;
	}

	.hero-h1, 
	.hero-gradient-text {
		font-size: 60px !important;
		line-height: 80px !important;
	}
}


@media (max-width: 480px) {

	.hero-swappable-line {
		display: flex;
		flex-direction: column;
	}
	
	.hero-h2,
	.hero-swappable-1,
	.hero-swappable-2,
	.hero-swappable-3 {
		font-size: 30px !important;
		margin: 0 5px !important;
	}

	.hero-h1, 
	.hero-gradient-text {
		font-size: 50px !important;
		line-height: 60px !important;
	}
}



.hero-h2,
.hero-swappable {
	margin: 0 10px;
	white-space: nowrap;
	font-size: 48px;
	font-weight: 900;
}

.hero-swappable-1 {
	background-image: linear-gradient(to bottom, #ff8e90, #ffa95c);
}
/* ... */

